--- a/package.json
+++ b/package.json
@@ -1,40 +1,45 @@
 {
   "name": "my-webpack-project",
   "version": "1.0.0",
-  "scripts": {
-    "build": "webpack --mode=production --define-process-env-node-env=production",
-    "start": "http-server -c-1./",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production --define-process-env-node-env=production",
-    "watch": "webpack --watch",
-    "serve": "webpack serve"
-  },
-  "devDependencies": {
-    "@webpack-cli/generators": "^3.0.0",
-    "dist-js": "^0.3.0",
-    "http-server": "^14.1.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0"
-  },
-  "dependencies": {
-    "dist": "^0.1.2",
-    "gitignore": "^0.7.0",
-    "jquery": "^3.6.1",
-    "locally": "^0.2.1",
-    "lodash": "^4.17.21",
-    "src": "^1.1.2"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://Artemtaryanik2@bitbucket.org/artemtaryanik2/flexcc.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://bitbucket.org/artemtaryanik2/flexcc/issues"
   },
   "homepage": "https://bitbucket.org/artemtaryanik2/flexcc#readme",
-  "description": "My webpack project"
+  "description": "My webpack project",
+  "scripts": {
+    "build": "webpack --mode=production --define-process-env-node-env=production",
+    "start": "http-server -c-1./",
+    "build:dev": "webpack --mode=development",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
+  },
+  "dependencies": {
+    "jquery": "^3.6.1",
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "@webpack-cli/generators": "^3.0.0",
+    "babel-loader": "^9.1.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.2",
+    "dist-js": "^0.3.0",
+    "html-webpack-plugin": "^5.5.0",
+    "http-server": "^14.1.1",
+    "mini-css-extract-plugin": "^2.7.2",
+    "path": "^0.12.7",
+    "sass": "^1.56.2",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.11.1"
+  }
 }
